# pico-epaper

./: .gitignore  CMakeLists.txt  main.c  spi_test.c
include/: pico-waveshare_ePaper_1_54in.h
lib/: CMakeLists.txt  pico-waveshare_ePaper_1_54in.c
minicom_output/: output
